# Seer

./: .gitignore  README.md  pyproject.toml
configs/: seer_124m.yaml  seer_304m.yaml  sft_alpaca.yaml
inference/: sample.py
results/lm_eval/: results_2026-06-19T15-47-42.932812.json  summary.json
results/lm_eval/artifacts__hf_seer_124m/: results_2026-06-18T11-46-21.902267.json
results/lm_eval/evals_chat/dpo/__ckpt__dpo_results/: results_2026-07-17T19-42-01.133463.json  samples_ifeval_2026-07-17T19-42-01.133463.jsonl
results/lm_eval/evals_chat/sft/__ckpt__sft_out__checkpoint-1500/: results_2026-07-17T19-39-49.680044.json  samples_ifeval_2026-07-17T19-39-49.680044.jsonl
results/lm_eval/evals_full/dpo/__ckpt__dpo_results/: results_2026-07-17T20-59-35.132765.json  (+4 more)
results/lm_eval/post_sft/: results_2026-06-22T00-39-23.981985.json
results/lm_eval/pre_sft/: results_2026-06-19T16-15-51.555684.json
results/runs/: generation_samples.json
results/runs/seer-dpo/: dpo_log.jsonl
results/runs/seer_124m/: run_card.json  train_log.jsonl
src/data/: download.py  prepare.py
src/eval/: aggregate_evals.py  convert_to_hf.py  hellaswag.py  run_evals.sh
src/inference/: chat.py  sample.py
src/metrics/: model_card.py  tracker.py
src/models/: GPT_model.py
src/post_training/: dpo.py  modal_sft.py  sft.py
src/training/: modal_train.py  train_model.py
src/utils/: plot_cost.py  plot_dpo.py  plot_eval_comparison.py  plot_evals.py  plot_hardware.py  plot_params.py  plot_sft.py  plot_training.py  utils.py
training/: train_model.py
(+39 files in other folders)
