[project]
name = "seer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "pyyaml>=6.0",
    "huggingface-hub>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/models", "src/training", "src/data", "src/metrics"]
